se añade postgres, y jpa para obtener información, pendietne indicar queries y manejar transacciones

--- a/springmodel/src/main/resources/application.yml
+++ b/springmodel/src/main/resources/application.yml
@@ -3,3 +3,11 @@ logging:
 
 server:
   port: 8865
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/test
+    username: postgres
+    password: sql2016.
+  jpa:
+    generate-ddl: true
