--- a/springmodel/src/main/resources/application.yml
+++ b/springmodel/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 logging:
   level.: DEBUG
+  config: classpath:log4j2.properties
 
 server:
   port: 8865
@@ -10,4 +11,8 @@ spring:
     username: postgres
     password: sql2016.
   jpa:
+    properties:
+      hibernate:
+        format_sql: true
     generate-ddl: true
+    show-sql: true
