--- a/springmodel/src/main/resources/log4j2.properties
+++ b/springmodel/src/main/resources/log4j2.properties
@@ -1,4 +1,4 @@
-status = warn
+status = debug
 
 #File
 appender.rolling.type = RollingFile
@@ -15,6 +15,6 @@ appender.rolling.strategy.max = 10
 
 # Log to console and rolling file
 logger.app.name = com.project.springmodel
-logger.app.level = WARN
+logger.app.level = debug
 logger.app.additivity = false
 logger.app.appenderRef.rolling.ref = RollingFile
